--- a/custom_components/uhppoted/manifest.json
+++ b/custom_components/uhppoted/manifest.json
@@ -2,7 +2,7 @@
   "domain": "uhppoted",
   "name": "uhppoted",
   "codeowners": [ "@uhppoted" ],
-  "config_flow": false,
+  "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/uhppoted/uhppoted-app-home-assistant",
   "iot_class": "local_polling",
