--- a/.github/workflows/alpha.yaml
+++ b/.github/workflows/alpha.yaml
@@ -1,10 +1,6 @@
-name: build
+name: alpha
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
