Changed alpha artifact names to -prerelease

--- a/.github/workflows/alpha.yaml
+++ b/.github/workflows/alpha.yaml
@@ -26,16 +26,16 @@ jobs:
       run: make build-all
 
     - name: Build archive
-      run: make release DIST=uhppoted-app-home-assistant_alpha-v0.0.0
+      run: make release DIST=uhppoted-app-home-assistant_alpha-prerelease
 
     - name: Upload .tar.gz artifact
       uses: actions/upload-artifact@v4
       with:
         path: dist/*.tar.gz
-        name: uhppoted-app-home-assistant_alpha-v0.0.0.tar.gz
+        name: uhppoted-app-home-assistant_alpha-prerelease.tar.gz
 
     - name: Upload .zip artifact
       uses: actions/upload-artifact@v4
       with:
         path: dist/*.zip
-        name: uhppoted-app-home-assistant_alpha-v0.0.0.zip
+        name: uhppoted-app-home-assistant_alpha-prerelease.zip
