Replaced 'async_forward_entry_setup' with 'await async_forward_entry_setups(...) (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/12)

--- a/docker/dev/2024.11.3/compose.yml
+++ b/docker/dev/2024.11.3/compose.yml
@@ -4,7 +4,7 @@ services:
     image: "ghcr.io/home-assistant/home-assistant:stable"
     volumes:
       - /config
-      - ../../custom_components/uhppoted:/config/custom_components/uhppoted
+      - ../../../custom_components/uhppoted:/config/custom_components/uhppoted
     restart: no
     privileged: false
     network_mode: "bridge"
