Included configuration.yaml in HA2024.11.3

--- a/docker/2024.11.3/compose.yml
+++ b/docker/2024.11.3/compose.yml
@@ -4,10 +4,11 @@ services:
     image: "ghcr.io/home-assistant/home-assistant:stable"
     volumes:
       - /config
-      - ../../../custom_components/uhppoted:/config/custom_components/uhppoted
+      - ./configuration.yaml:/config/configuration.yaml
+      - ../../custom_components/uhppoted:/config/custom_components/uhppoted
     restart: no
     privileged: false
     network_mode: "bridge"
     ports:
-       - "8124:8123"
+       - "8123:8123"
 
