--- a/docker/stable/compose.yml
+++ b/docker/stable/compose.yml
@@ -1,7 +1,7 @@
 services:
   home-assistant:
-    container_name: home-assistant-2024.11.3
-    image: "ghcr.io/home-assistant/home-assistant:2024.11.3"
+    container_name: home-assistant-stable
+    image: "ghcr.io/home-assistant/home-assistant:stable"
     volumes:
       - /config
       - ./configuration.yaml:/config/configuration.yaml
