--- a/docker/dev/2024.11.3/configuration.yaml
+++ b/docker/dev/2024.11.3/configuration.yaml
@@ -5,9 +5,9 @@ default_config:
 frontend:
   themes: !include_dir_merge_named themes
 
-# automation: !include automations.yaml
-# script: !include scripts.yaml
-# scene: !include scenes.yaml
+automation: !include automations.yaml
+script: !include scripts.yaml
+scene: !include scenes.yaml
 
 logger:
   default: info
@@ -20,8 +20,8 @@ uhppoted:
     listen_address: 192.168.1.100:60001
     debug: false
     timezone: CEST
-    timeout: 1.23
-    max_cards: 7
+    timeout: 2.5
+    max_cards: 10
     preferred_cards:
         - 8165535
         - 8165536
