Adding unit tests to github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,17 +14,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Python 3.11
+    - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
-        python-version: ^3.11
+        python-version: ^3.12
       id: python
 
     - name: Install Python packages
-      run: pip install toml yapf
+      run: |
+        pip install toml yapf
+        pip install pytest pytest-homeassistant-custom-component uhppoted netifaces
 
     - name: Check out code
       uses: actions/checkout@v4
 
     - name: Build
       run: make build-all
+
+    - name: Unit tests
+      run: python3 -m unittest tests/uhppoted/*.py 
