Added cache.expiry.interlock to configuration.yaml

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -50,6 +50,9 @@ uhppoted:
             port: 54321
             timeout: 0.56
             protocol: TCP
+    cache:
+        expiry:
+            interlock: 120
 
 template:
   - trigger:
