docker: added uhppoted-lib source folder to development container

--- a/docker/dev/stable/compose.yml
+++ b/docker/dev/stable/compose.yml
@@ -6,6 +6,7 @@ services:
       - /config
       - ./configuration.yaml:/config/configuration.yaml
       - ../../../custom_components/uhppoted:/config/custom_components/uhppoted
+      - ../../../../uhppoted-lib-python:/usr/local/lib/uhppoted
     restart: no
     privileged: false
     network_mode: "bridge"
