--- a/custom_components/uhppoted/manifest.json
+++ b/custom_components/uhppoted/manifest.json
@@ -6,7 +6,7 @@
   "dependencies": [],
   "documentation": "https://github.com/uhppoted/uhppoted-app-home-assistant",
   "iot_class": "local_polling",
-  "requirements": [ "uhppoted==0.8.10" ],
+  "requirements": [ "uhppoted>=0.8.10" ],
   "version": "0.8.10.4",
   "homekit": {},
   "ssdp": [],
