Added task queue for serialised 'background fetch' (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/1)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -52,6 +52,7 @@ uhppoted:
             protocol: TCP
     cache:
         expiry:
+            datetime: 120
             interlock: 120
 
 template:
