Migrated get-controller to cache/task queue (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/1)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -52,6 +52,7 @@ uhppoted:
             protocol: TCP
     cache:
         expiry:
+            controller: 90
             datetime: 120
             interlock: 120
 
