Cached event listener (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/18)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -53,6 +53,7 @@ uhppoted:
     cache:
         expiry:
             controller: 90
+            listener: 300
             datetime: 120
             interlock: 120
 
