Cached door mode/delay (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/18)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -55,6 +55,7 @@ uhppoted:
             controller: 90
             listener: 300
             datetime: 120
+            doors: 180
             interlock: 120
 
 template:
