--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -56,6 +56,7 @@ uhppoted:
             listener: 300
             datetime: 120
             doors: 180
+            status: 90
             interlock: 120
 
 template:
