Cached controller anti-passback (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/18)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -58,6 +58,7 @@ uhppoted:
             doors: 180
             status: 90
             interlock: 120
+            antipassback: 120
 
 template:
   - trigger:
