Caching event information (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/18)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -60,6 +60,7 @@ uhppoted:
             status: 91
             interlock: 122
             antipassback: 123
+            event: 182
 
 template:
   - trigger:
