Added cache.enabled to configuration.yaml (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/18)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -51,6 +51,7 @@ uhppoted:
             timeout: 0.56
             protocol: TCP
     cache:
+        enabled: true
         expiry:
             controller: 90
             listener: 300
