Moved yapf to venv

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -24,6 +24,9 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4
 
+    - name: Create (dummy) .venv virtual environment
+      run: python -m venv .venv
+
     - name: Build
       run: make build-all
 
