async: added event.listener.max_backoff to configuration.yaml (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/20)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -61,6 +61,10 @@ uhppoted:
             interlock: 122
             antipassback: 123
             event: 182
+    events:
+        listener:
+            enabled: true
+            max_backoff: 120
 
 template:
   - trigger:
