Added opt-out for card, door and controller event entities to configuration.yaml (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/14)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -66,6 +66,12 @@ uhppoted:
         listener:
             enabled: true
             max_backoff: 120
+        cards:
+            enabled: true
+        doors:
+            enabled: true
+        controllers:
+            enabled: true
 
 template:
   - trigger:
