Added a persisted.entities section to configuration.yaml (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/23)

--- a/docker/dev/stable/configuration.yaml
+++ b/docker/dev/stable/configuration.yaml
@@ -73,6 +73,11 @@ uhppoted:
         controllers:
             enabled: true
 
+    persisted:
+        entities:
+            - uhppoted.controller.alpha.interlock
+            - uhppoted.controller.gamma.interlock
+
 template:
   - trigger:
       - platform: event
